--- a/css/style.css
+++ b/css/style.css
@@ -69,9 +69,35 @@ figcaption>p {
 }
 
 .p_city {
-    color : #D3573C;
+    color : #901C1C;
 }
 
 .p_price {
     color:grey;
+}
+
+
+
+.photograph-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.photograph-header_presentation{
+    margin-left: 50px;
+}
+
+.photograph-header h2 {
+    color: #D3573C;
+    font-size: 46px;
+    margin-bottom: 5px;
+}
+
+.photo_photographer {
+        border-radius: 50%;
+        height: 200px;
+        width: 200px;
+        margin-right:50px;
 }
