--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ h1 {
     margin-right: 100px;
 }
 
-article>a {
+a {
     text-decoration: none;
     display: flex;
     flex-direction: column;
@@ -101,3 +101,103 @@ figcaption>p {
         width: 200px;
         margin-right:50px;
 }
+
+
+
+
+
+
+
+
+/* Menu tri */
+.photograph-media__tri {
+    display: flex;
+    align-items: center;
+        margin-left: 2rem;
+        margin-top: 2rem;
+}
+
+    .arrow-open {
+        color: #fff;
+        left: 20.5rem;
+        position: absolute;
+        top: 27.4rem;
+    }
+
+    .arrow-close {
+        color: #fff;
+        left: 8.5rem;
+        position: absolute;
+        top: 1.55rem;
+    }
+
+    .menu-tri li {
+        background: #901c1c;
+        color: #fff;
+        font-size: 1.2rem;
+        font-weight: 500;
+        padding: 1.25rem;
+    }
+
+    .tri-btn {
+        align-items: center;
+        background: #901c1c;
+        border: none;
+        border-radius: 5px;
+        color: #fff;
+        display: flex;
+        font-size: 1rem;
+        font-weight: 500;
+        justify-content: flex-start;
+        left: 11rem;
+        padding: .625rem 1.25rem;
+        position: absolute;
+        top: 25.6rem;
+        width: 10rem;
+    }
+
+    .photograph-media__tri>p {
+        font-size: 1.2rem;
+        font-weight: 700;
+        margin-right: 1.5625rem;
+    }
+
+    ul.menu-tri {
+        border-radius: 5px;
+        color: #fff;
+        display: none;
+        left: 11rem;
+        padding: .625rem 0rem;
+        position: absolute;
+        top: 25.6rem;
+        width: 11rem;
+        z-index: 10;
+    }
+
+    ul.menu-tri li:hover {
+        background-color: #651414;
+        cursor: pointer;
+    }
+
+    ul.menu-tri li:nth-child(1) {
+        align-items: center;
+        display: flex;
+        justify-content: space-between;
+    }
+
+
+
+    .photograph-media__photos {
+        width : 100%;
+        display : flex;
+        flex-wrap: wrap;
+    }
+
+    .photograph-media__photos>figure {
+        width:30%;
+    }
+
+    .photograph-media__photos img {
+            height: 200px;
+            width: 200px;
+    }
