Menu pour le tri des medias

--- a/css/photographer.css
+++ b/css/photographer.css
@@ -1,5 +1,12 @@
 #contact_modal {
     display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    overflow: auto;
 }
 
 .photograph-header {
@@ -20,6 +27,17 @@
     border-radius: 5px;
     cursor: pointer;
 }
+
+.contact_button:hover {
+    background-color: #D3573C;
+    color:black
+}
+
+.contact_button:focus {
+    background-color: #D3573C;
+    color:black
+}
+
 
 .modal {
     border-radius: 5px;
@@ -74,3 +92,76 @@ form input {
     border: none;
     border-radius: 5px;
 }
+
+
+.formData[data-error]::after {
+    content: attr(data-error);
+    font-size: 0.4em;
+    color: #e54858;
+    display: block;
+    margin-top: 7px;
+    margin-bottom: 7px;
+    text-align: right;
+    line-height: 0.3;
+    opacity: 0;
+    transition: 0.3s;
+  }
+  .formData[data-error-visible="true"]::after {
+    opacity: 1;
+  }
+  .formData[data-error-visible="true"] .text-control {
+    border: 2px solid #e54858;
+  }
+
+  #message {
+      width:100%;
+      height:15rem;
+  }
+
+
+
+  .bground-validation {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    overflow: auto;
+  
+  }
+
+.content {
+    margin: 5% auto;
+    width: 100%;
+    max-width: 500px;
+    animation-name: modalopen;
+    animation-duration: var(--modal-duration);
+    background-color: #DB8876;
+    border-radius: 10px;
+    overflow: hidden;
+    position: relative;
+    color: #fff;
+    padding-top: 10px;
+  }
+
+  .modal-body{
+    padding: 15px 8%;
+    margin: 15px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+
+  .close-icon {
+    position: absolute;
+    right: 15px;
+    top: 15px;
+    width: 32px;
+    height: 32px;
+    opacity: 1;
+    cursor: pointer;
+    transform: scale(0.7);
+  }
