--- a/css/style.css
+++ b/css/style.css
@@ -119,9 +119,7 @@ figcaption>p {
 
     .arrow-open {
         color: #fff;
-        left: 20.5rem;
-        position: absolute;
-        top: 27.4rem;
+
     }
 
     .arrow-close {
@@ -132,28 +130,23 @@ figcaption>p {
     }
 
     .menu-tri li {
-        background: #901c1c;
         color: #fff;
-        font-size: 1.2rem;
+        font-size: 1rem;
         font-weight: 500;
-        padding: 1.25rem;
+        padding: 1rem;
     }
 
-    .tri-btn {
+
+    #sort-wrapper {
         align-items: center;
         background: #901c1c;
-        border: none;
         border-radius: 5px;
         color: #fff;
         display: flex;
         font-size: 1rem;
         font-weight: 500;
-        justify-content: flex-start;
-        left: 11rem;
-        padding: .625rem 1.25rem;
-        position: absolute;
-        top: 25.6rem;
         width: 10rem;
+        justify-content: space-around;
     }
 
     .photograph-media__tri>p {
@@ -164,18 +157,20 @@ figcaption>p {
 
     ul.menu-tri {
         border-radius: 5px;
+        padding:0;
         color: #fff;
         display: none;
-        left: 11rem;
-        padding: .625rem 0rem;
+        left: 8.2rem;
         position: absolute;
-        top: 25.6rem;
-        width: 11rem;
+        top: 25.7rem;
+        width: 10rem;
         z-index: 10;
+        list-style-type: none;
+        background: #901c1c;
     }
 
     ul.menu-tri li:hover {
-        background-color: #651414;
+        background-color: #901C1C;
         cursor: pointer;
     }
 
@@ -194,10 +189,31 @@ figcaption>p {
     }
 
     .photograph-media__photos>figure {
-        width:30%;
+        width:25%;
+        margin:40px;
     }
 
     .photograph-media__photos img {
-            height: 200px;
-            width: 200px;
+            width: 100%;
+            height:300px
+    }
+
+    .photograph-media__photos figcaption {
+        display : flex;
+        justify-content: space-between;
+        margin-top: 10px;
+        align-items: center;
+        color: #901c1c;
+
+    }
+
+    .photograph-media__photos figcaption>p {
+        color: #901c1c;
+    }
+
+    .photograph-media__photos figcaption>div {
+        display : flex;
+        align-items: center;
+        width:14%;
+        justify-content: space-between;
     }
