--- a/css/photographer.css
+++ b/css/photographer.css
@@ -165,3 +165,132 @@ form input {
     cursor: pointer;
     transform: scale(0.7);
   }
+
+.photograph-media__tri {
+    display: flex;
+    align-items: center;
+    margin-left: 2rem;
+    margin-top: 2rem;
+    width: 300px;
+    justify-content: space-between;
+}
+/* 
+#select-tri {
+    background: #901c1c;
+    color:white;
+    border-radius: 5px;
+    border:none;
+    width: 10rem;
+    font-size: 1rem;
+    font-weight: 500;
+    height:40px;
+
+}
+  #sort-wrapper {
+    align-items: center;
+    background: #901c1c;
+    border-radius: 5px;
+    color: #fff;
+    display: flex;
+    font-size: 1rem;
+    font-weight: 500;
+    width: 10rem;
+    justify-content: space-around;
+}
+
+
+  #select-tri {
+    border-radius: 5px;
+    padding:0;
+    color: #fff;
+    display: none;
+    left: 8.2rem;
+    position: absolute;
+    top: 25.7rem;
+    width: 10rem;
+    z-index: 10;
+    list-style-type: none;
+    background: #901c1c;
+} */
+
+
+/* The container must be positioned relative: */
+.custom-select {
+    position: relative;
+    font-family: Arial;
+  }
+  
+  .custom-select select {
+    /* display: none; hide original SELECT element: */
+  }
+  
+  .select-selected {
+    background-color: #901C1C;
+    border-radius: 5px;
+    width:100px;
+    height:30px;
+    display: flex;
+    align-items: center;
+  }
+  
+  /* Style the arrow inside the select element: */
+  .select-selected:after {
+    position: absolute;
+    content: "";
+    top: 20px;
+    right: 10px;
+    width: 10px;
+    height: 0;
+    border: 6px solid transparent;
+    border-color: #fff #fff transparent transparent;
+
+  }
+  
+  /* Point the arrow upwards when the select box is open (active): */
+  .select-selected.select-arrow-active:after {
+ 
+    border-color: transparent transparent #fff transparent;
+    top: 7px;
+
+  }
+
+  .select-selected.fa-chevron-up:after {
+    border-color: transparent transparent #fff transparent;
+    top: 7px;
+
+  }
+
+  /* .select-selected .fa-chevron-up {
+    display:block;
+  }
+  .select-selected .fa-chevron-down {
+    display:none;
+  } */
+  
+  /* style the items (options), including the selected item: */
+  .select-items div,.select-selected {
+    color: #ffffff;
+    padding: 8px 16px;
+    border: 1px solid transparent;
+    border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
+    cursor: pointer;
+  }
+  
+  /* Style items (options): */
+  .select-items {
+    position: absolute;
+    background-color: #901C1C;
+    top: 100%;
+    left: 0;
+    right: 0;
+    z-index: 99;
+  }
+  
+  /* Hide the items when the select box is closed: */
+  .select-hide {
+    display: none;
+  }
+  
+  .select-items div:hover, .same-as-selected {
+    background-color: rgba(0, 0, 0, 0.1);
+  }
