--- a/css/style.css
+++ b/css/style.css
@@ -68,11 +68,11 @@ figcaption>p {
     width: 200px;
 }
 
-.p_city {
+.pCity {
     color : #901C1C;
 }
 
-.p_price {
+.pPrice {
     color:grey;
 }
 
@@ -110,14 +110,8 @@ figcaption>p {
 
 
 /* Menu tri */
-.photograph-media__tri {
-    display: flex;
-    align-items: center;
-        margin-left: 2rem;
-        margin-top: 2rem;
-}
 
-    .arrow-open {
+    /* .arrow-open {
         color: #fff;
 
     }
@@ -134,10 +128,10 @@ figcaption>p {
         font-size: 1rem;
         font-weight: 500;
         padding: 1rem;
-    }
+    } */
 
 
-    #sort-wrapper {
+ /*   #sort-wrapper {
         align-items: center;
         background: #901c1c;
         border-radius: 5px;
@@ -149,7 +143,7 @@ figcaption>p {
         justify-content: space-around;
     }
 
-    .photograph-media__tri>p {
+     .photograph-media__tri>p {
         font-size: 1.2rem;
         font-weight: 700;
         margin-right: 1.5625rem;
@@ -179,7 +173,7 @@ figcaption>p {
         align-items: center;
         display: flex;
         justify-content: space-between;
-    }
+    } */
 
 
 
@@ -196,12 +190,16 @@ figcaption>p {
 
     .photograph-media__photos img {
             width: 100%;
-            height:300px
+            height:300px;
+            object-fit:cover;
+            border-radius: 7px;
     }
 
     .photograph-media__photos video {
         width: 100%;
-        height:300px
+        height:300px;
+        object-fit:cover;
+        border-radius: 7px;
 }
 
     .photograph-media__photos figcaption {
