--- a/css/photographer.css
+++ b/css/photographer.css
@@ -218,54 +218,34 @@ form input {
 .custom-select {
     position: relative;
     font-family: Arial;
+    width:200px;
   }
   
   .custom-select select {
-    /* display: none; hide original SELECT element: */
+    display: none; /*hide original SELECT element: */
   }
   
   .select-selected {
-    background-color: #901C1C;
-    border-radius: 5px;
-    width:100px;
-    height:30px;
-    display: flex;
-    align-items: center;
+    background-color: DodgerBlue;
   }
   
   /* Style the arrow inside the select element: */
   .select-selected:after {
     position: absolute;
     content: "";
-    top: 20px;
+    top: 14px;
     right: 10px;
-    width: 10px;
+    width: 0;
     height: 0;
     border: 6px solid transparent;
-    border-color: #fff #fff transparent transparent;
-
+    border-color: #fff transparent transparent transparent;
   }
   
   /* Point the arrow upwards when the select box is open (active): */
   .select-selected.select-arrow-active:after {
- 
     border-color: transparent transparent #fff transparent;
     top: 7px;
-
   }
-
-  .select-selected.fa-chevron-up:after {
-    border-color: transparent transparent #fff transparent;
-    top: 7px;
-
-  }
-
-  /* .select-selected .fa-chevron-up {
-    display:block;
-  }
-  .select-selected .fa-chevron-down {
-    display:none;
-  } */
   
   /* style the items (options), including the selected item: */
   .select-items div,.select-selected {
@@ -279,7 +259,7 @@ form input {
   /* Style items (options): */
   .select-items {
     position: absolute;
-    background-color: #901C1C;
+    background-color: DodgerBlue;
     top: 100%;
     left: 0;
     right: 0;
