--- a/css/photographer.css
+++ b/css/photographer.css
@@ -274,3 +274,21 @@ form input {
   .select-items div:hover, .same-as-selected {
     background-color: rgba(0, 0, 0, 0.1);
   }
+
+
+  .boxLikesAndPrice{
+      background-color: #DB8876;
+      color:black;
+      display: flex;
+      width:200px;
+      justify-content: space-around;
+      position : fixed;
+      bottom:0;
+      right:40px;
+  }
+
+
+  .boxLikesAndPrice__div{
+      display:flex;
+    align-items: center;
+  }
