--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
 @import url("photographer.css");
+@import url("lightbox.css");
+@import url("formulaire.css");
 
 body {
     font-family: "DM Sans", sans-serif;
