--- a/css/photographer.css
+++ b/css/photographer.css
@@ -5,6 +5,10 @@
     margin: 0 100px;
 }
 
+.photograph-header img {
+  object-fit: cover;
+}
+
 .contact_button {
     font-size: 20px;
     font-weight: bold;
@@ -41,7 +45,7 @@
   
   }
 
-  
+
 .photograph-media__tri {
     display: flex;
     align-items: center;
