--- a/css/photographer.css
+++ b/css/photographer.css
@@ -66,96 +66,6 @@
     height:40px;
 
 }
-/*
-  #sort-wrapper {
-    align-items: center;
-    background: #901c1c;
-    border-radius: 5px;
-    color: #fff;
-    display: flex;
-    font-size: 1rem;
-    font-weight: 500;
-    width: 10rem;
-    justify-content: space-around;
-}
-
-
-  #select-tri {
-    border-radius: 5px;
-    padding:0;
-    color: #fff;
-    display: none;
-    left: 8.2rem;
-    position: absolute;
-    top: 25.7rem;
-    width: 10rem;
-    z-index: 10;
-    list-style-type: none;
-    background: #901c1c;
-} */
-
-
-/* The container must be positioned relative:
-.custom-select {
-    position: relative;
-    font-family: Arial;
-    width:200px;
-  }
-  
-  .custom-select select {
-    display: none; /*hide original SELECT element: */
-  /* }
-  
-  .select-selected {
-    background-color: DodgerBlue;
-  }
-   */
-  /* Style the arrow inside the select element: */
-  /* .select-selected:after {
-    position: absolute;
-    content: "";
-    top: 14px;
-    right: 10px;
-    width: 0;
-    height: 0;
-    border: 6px solid transparent;
-    border-color: #fff transparent transparent transparent;
-  } */
-  
-  /* Point the arrow upwards when the select box is open (active): */
-  /* .select-selected.select-arrow-active:after {
-    border-color: transparent transparent #fff transparent;
-    top: 7px;
-  } */
-  
-  /* style the items (options), including the selected item: */
-  /* .select-items div,.select-selected {
-    color: #ffffff;
-    padding: 8px 16px;
-    border: 1px solid transparent;
-    border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
-    cursor: pointer;
-  } */
-  
-  /* Style items (options): */
-  /* .select-items {
-    position: absolute;
-    background-color: DodgerBlue;
-    top: 100%;
-    left: 0;
-    right: 0;
-    z-index: 99;
-  } */ 
-  
-  /* Hide the items when the select box is closed: */
-  /* .select-hide {
-    display: none;
-  }
-  
-  .select-items div:hover, .same-as-selected {
-    background-color: rgba(0, 0, 0, 0.1);
-  }
- */
 
   .boxLikesAndPrice{
       background-color: #DB8876;
@@ -172,4 +82,8 @@
   .boxLikesAndPrice__div{
       display:flex;
     align-items: center;
+  }
+
+  .likeHeart {
+    color: #901c1c;
   }
